# cloudways-api

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
cloudways_api/: __init__.py  bitbucket.py  capistrano_parser.py  cli.py  client.py  config.py  credentials.py  db.py  env_detect.py  exceptions.py  salts.py  ssh.py  templates.py  templates_provision.py  url_replace.py
cloudways_api/commands/: __init__.py  _shared.py  alerts.py  app_webroot.py  appsec.py  backup.py  capistrano.py  cloudflare.py  copilot.py  db_pull.py  db_push.py  db_restore.py  db_sync.py  deploy_key.py  disk.py  env_capture.py  env_generate.py  git.py  info.py  init_shared.py  monitor.py  reset_permissions.py  security.py  (+12 more)
tests/: __init__.py  conftest.py  test_alerts.py  test_app_webroot.py  test_appsec.py  test_backup.py  test_bitbucket.py  test_capistrano.py  test_capistrano_parser.py  test_cli.py  test_cli_smoke.py  test_client.py  test_cloudflare.py  test_config.py  test_copilot.py  test_credentials.py  test_db.py  test_db_pull.py  test_db_push.py  test_db_restore.py  test_db_sync.py  test_deploy_key.py  test_env_capture.py  test_env_generate.py  test_git.py  test_info.py  test_init_shared.py  test_monitor.py  test_provision_app.py  test_provision_server.py  test_provision_staging.py  test_reset_permissions.py  test_safeupdates.py  test_salts.py  test_security.py  test_server.py  test_serversec.py  test_services_deploy.py  test_setup_bedrock.py  test_setup_project.py  (+11 more)
(+13 files in other folders)
